# guiscrcpy

./: pyproject.toml
.github/workflows/: continuous.yml  pythonapp.yml
guiscrcpy/ui/pyqt5/: downloader.py  main.py  network.py  panel.py  toolkit.py
guiscrcpy/ui/pyside2/: downloader.py  main.py  network.py  panel.py  settings.py  toolkit.py
guiscrcpy/ux/: __init__.py  swipe.py
pyappimage/: AppRun.standalone.sh  pyappimage.yml
scripts/ci/desktop-environment/: Dockerfile
scripts/ci/pyappimage/: Dockerfile
