[tool.poetry]
name = "guiscrcpy"
version = "2023.1.1"
description = "A simple, pluggable, graphical user interface for the fastest Android screen mirroring software"
authors = ["Srevin Saju <srevinsaju@sugarlabs.org>"]
license = "GPLv3"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/srevinsaju/guiscrcpy/issues"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
psutil = "^7.0.0"
pynput = "1.8.1"
colorama = "^0.4.6"
click = "^8.2.1"
QtPy = ">=2.4.3"
PyQt6 = {version = "^6.9.1", optional = true}
PyInstaller = {version = "6.15.0", optional = true}
pywin32 = {version = "311", markers = "platform_system == 'Windows'" }
cairosvg = "^2.8.2"
coloredlogs = "^15.0.1"
black = "25.1.0"
cffi = ">=1.17.1"
pyside6 = "^6.9.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.poetry.extras]
PyQt6 = ["pyqt6"]
PySide6 = ["pyside6"]
PyInstaller = ["pyinstaller"]

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
guiscrcpy = "guiscrcpy.cli:cli"

